--- a/config.toml
+++ b/config.toml
@@ -8,6 +8,7 @@ paginate = 5
 # copyright = "Except where otherwise noted, content on this site is licensed under a [Creative Commons Attribution 4.0 International license](https://creativecommons.org/licenses/by-sa/4.0/)."
 #googleAnalytics = "UA-123-45"
 #disqusShortname = "XYW"
+hasCJKLanguage = true
 
 [permalinks]
   post = "/:year/:month/:title/"
