--- a/wercker.yml
+++ b/wercker.yml
@@ -37,12 +37,12 @@ update-search-engine:
       name: create entries file
       cwd: scripts/hugo-entry-to-elasticsearch-json
       code: |
-        RUBYOPT=-EUTF-8 bundle exec ruby main.rb ../../content/faq/
-#    - script:
-#      name: update entries data
-#      cwd: hugo-entry-to-elasticsearch-json
-#      code: |
-#        curl -u ${API_BASIC_USER}:${API_BASIC_PASSWORD} -XPOST 'https://gill-search.mosuke.tech/update' -F "file=@entries.json"
+        RUBYOPT=-EUTF-8 bundle exec ruby main.rb ../../content/faq/ > faqs.json
+    - script:
+      name: update faq data
+      cwd: scripts/hugo-entry-to-elasticsearch-json
+      code: |
+        curl -u ${API_BASIC_USER}:${API_BASIC_PASSWORD} -XPOST 'https://development-gill-search.mosuke.tech/update' -F "file=@faqs.json"
 #  after-steps:
 #    - slack-notifier:
 #      channel: $SLACK_CHANNEL
